<resources>
    <string name="app_name" translatable="false">DSP Manager</string>
    <string name="select_configuration_title">Select configuration to edit</string>
    <string name="headset_title">Headset</string>
    <string name="speaker_title">Speaker</string>
    <string name="bluetooth_title">Bluetooth</string>
    <string name="audio_effects">Audio effects</string>
    <string name="pref_unavailable">Functionality is not available on your device</string>
    <string name="dsp_settings_headset">DSP settings - Headset</string>
    <string name="dsp_settings_speaker">DSP settings - Phone speaker</string>
    <string name="dsp_settings_bluetooth">DSP settings - Bluetooth device</string>
    <string name="dsp_settings_wm8994">DSP settings - WM8994</string>
    <string name="pref_dsp_title">Dynamic range compression</string>
    <string name="pref_dsp_summary_on">Compression is enabled</string>
    <string name="pref_dsp_summary_off">Compression is disabled</string>
    <string name="pref_dsp_enable">Enable</string>
    <string name="pref_effect_title">Select effect strength</string>
    <string name="pref_effect_freq_title">Select effect center frequency</string>
    <string name="dialog_effect">Effect strength</string>
    <string name="pref_equalizer_title">Equalizer</string>
    <string name="pref_equalizer_summary_on">Equalizer is enabled</string>
    <string name="pref_equalizer_summary_off">Equalizer is disabled</string>
    <string name="pref_equalizer_enable">Enable</string>
    <string name="pref_equalizer_preset_title">Select preset</string>
    <string name="pref_equalizer_loudness_title">Loudness compensation</string>
    <string name="pref_bassboost_title">Bass boost</string>
    <string name="pref_bassboost_summary_on">Bass boost is enabled</string>
    <string name="pref_bassboost_summary_off">Bass boost is disabled</string>
    <string name="pref_bassboost_enable">Enable</string>
    <string name="pref_headset_virtual_title">Headset Virtual Room Effect</string>
    <string name="pref_headset_virtual_summary_on">Headset virtual room is enabled</string>
    <string name="pref_headset_virtual_summary_off">Headset virtual room is disabled</string>
    <string name="pref_headset_virtual_enable">Enable</string>
    <string name="pref_room_title">Select room type</string>
    <string name="dialog_room">Room type</string>
    <string name="menu_reset">Reset</string>
    <string name="pref_headset_stereowide_title">Stereo widener</string>
    <string name="pref_headset_stereowide_summary_on">Stereo widener is enabled</string>
    <string name="pref_headset_stereowide_summary_off">Stereo widener is disabled</string>
    <string name="pref_headset_stereowide_enable">Enable</string>
    <string name="dialog_stereo">Stereo widener</string>
    <string name="eq_preset_acoustic">Acoustic</string>
    <string name="eq_preset_bass_booster">Bass booster</string>
    <string name="eq_preset_bass_reducer">Bass reducer</string>
    <string name="eq_preset_classical">Classical</string>
    <string name="eq_preset_deep">Deep</string>
    <string name="eq_preset_flat">Flat</string>
    <string name="eq_preset_r_and_b">R&amp;B</string>
    <string name="eq_preset_rock">Rock</string>
    <string name="eq_preset_small_speakers">Small speakers</string>
    <string name="eq_preset_treble_booster">Treble booster</string>
    <string name="eq_preset_treble_reducer">Treble reducer</string>
    <string name="eq_preset_vocal_booster">Vocal booster</string>
    <string name="eq_preset_custom">Custom</string>
    <string name="category_wm8994_internal_speaker">Speaker</string>
    <string name="category_wm8994_signal_processing">Signal processing</string>
    <string name="category_wm8994_headphone_amp">Headset</string>
    <string name="category_wm8994_codec_optimization">Codec optimization</string>
    <string name="category_wm8994_dac_config">Digital/Analog converter settings</string>
    <string name="category_wm8994_analog_path">Analog path configuration</string>
    <string name="category_wm8994_mic_settings">Microphone settings</string>
    <string name="category_wm8994_microphone_recording">Microphone</string>
    <string name="wm8994_settings_title_head">Sound settings</string>
    <string name="wm8994_settings_title_subhead">Sound settings</string>
    <string name="wm8994_settings_summary_head">Advanced control of the WM8994 sound processor</string>
    <string name="pref_wm8994_microphone_recording_title">Recording preset</string>
    <string name="pref_wm8994_headphone_amp_title">Amplifier level</string>
    <string name="pref_wm8994_headphone_amp_summary">Customize the analog gain</string>
    <string name="pref_wm8994_headphone_amp_dlg_title">Headset amplifier level</string>
    <string name="pref_wm8994_headphone_amp_dlg_desc">Analog gain</string>
    <string name="pref_wm8994_bass_boost_enable_title">Bass boost</string>
    <string name="pref_wm8994_bass_boost_enable_summary">Advanced controls for bass boost</string>
    <string name="pref_wm8994_bass_boost_title">Bass boost range</string>
    <string name="pref_wm8994_bass_boost_summary">Advanced dynamic range management</string>
    <string name="pref_wm8994_bass_boost_preset_title">Bass boost preset</string>
    <string name="pref_wm8994_bass_boost_dlg_title">Bass boost</string>
    <string name="pref_wm8994_bass_boost_gain_dlg_desc">Gain</string>
    <string name="pref_wm8994_bass_boost_range_dlg_desc">Bass boost range</string>
    <string name="pref_wm8994_control_enable_title">Enable WM8994 Control</string>
    <string name="pref_wm8994_control_enable_summary">Advanced controls for the WM8994 sound processor</string>
    <string name="pref_wm8994_speaker_tuning_title">Tune for music</string>
    <string name="pref_wm8994_speaker_tuning_summary">Reconfigures the hardware EQ for more bass and balanced sound</string>
    <string name="pref_wm8994_mono_downmix_title">Mono downmix</string>
    <string name="pref_wm8994_mono_downmix_summary">Downmix stereo sound to mono (for stereo outputs, such as headphones)</string>
    <string name="pref_wm8994_stereo_expansion_title">Stereo expansion</string>
    <string name="pref_wm8994_stereo_expansion_summary">\'Expand\' stereo sound via digital signal processing</string>
    <string name="pref_wm8994_dac_direct_title">D/AC direct</string>
    <string name="pref_wm8994_dac_direct_summary">Access digital/analog converter directly, bypassing the channel mixer. Produces cleaner audio (higher signal-to-noise ratio)</string>
    <string name="pref_wm8994_dac_osr128_title">Hi-fi playback</string>
    <string name="pref_wm8994_dac_osr128_summary">Digital-to-analog converter 128x oversampling &#8212; cleaner sound when playing music</string>
    <string name="pref_wm8994_adc_osr128_title">Hi-fi recording</string>
    <string name="pref_wm8994_adc_osr128_summary">Analog-to-digital converter 128x oversampling &#8212; increases quality of recordings</string>
    <string name="pref_wm8994_fll_tuning_title">Tuned audio clock</string>
    <string name="pref_wm8994_fll_tuning_summary">Use tuned WM8994 audio clock source &#8212; improves quality of sound</string>
    <string name="save_preset">Save preset</string>
    <string name="load_preset">Load preset</string>
    <string name="new_preset">New preset...</string>
    <string name="help_title">Help</string>
    <string name="soundcontrol_title">Sound Control</string>
    <string name="pref_soundcontrol_presets_title">Sound Control Presets</string>
    <string name="pref_soundcontrol_headphone_gain_title">Headphone Gain</string>
    <string name="pref_soundcontrol_headphone_poweramp_gain_title">Headphone PowerAmp Gain</string>
    <string name="pref_soundcontrol_microphone_gain_title">Microphone Gain</string>
    <string name="pref_soundcontrol_speaker_gain_title">Speaker Gain</string>
    <string name="pref_soundcontrol_headphone_gain_left">Headphone (Left)</string>
    <string name="pref_soundcontrol_headphone_gain_right">Headphone (Right)</string>
    <string name="pref_soundcontrol_headphone_poweramp_gain_left">Headphone PowerAmp (Left)</string>
    <string name="pref_soundcontrol_headphone_poweramp_gain_right">Headphone PowerAmp (Right)</string>
    <string name="pref_soundcontrol_microphone_handset_gain_title">Handset Microphone</string>
    <string name="pref_soundcontrol_microphone_camcorder_gain_title">Camcorder Microphone</string>
    <string name="boeffla_sound_control">Boeffla sound control</string>
    <string name="boeffla_sound_title">Boeffla sound</string>
    <string name="boeffla_sound_summary">Enable boeffla sound</string>
    <string name="dac_direct_summary">Bypass the analog channel</string>
    <string name="dac_direct_title">DAC direct</string>
    <string name="dac_oversampling_summary">128x oversampling</string>
    <string name="dac_oversampling_title">DAC oversampling</string>
    <string name="fll_tuning_summary">Tune the chip clock for better quality</string>
    <string name="fll_tuning_title">FLL tuning</string>
    <string name="general_title">General</string>
    <string name="headphone_title">Headphone</string>
    <string name="mic_title">Microphone</string>
    <string name="mic_call">In call volume</string>
    <string name="mic_general">General volume</string>
    <string name="mono_downmix_summary">Convert stereo into mono</string>
    <string name="mono_downmix_title">Mono downmix</string>
    <string name="over_saturation_suppress">Over saturation suppress</string>
    <string name="privacy_mode_summary">Mute the phone speaker while headphones are plugged in</string>
    <string name="privacy_mode_title">Privacy mode</string>
    <string name="speaker_tuning_summary">Tune the phone speaker for better bass</string>
    <string name="speaker_tuning_title">Speaker tuning</string>
    <string name="speaker_volume_title">Speaker volume</string>
    <string name="stereo_expansion_summary">Improve sound deepness and clarity</string>
    <string name="stereo_expansion_title">Stereo expansion</string>
</resources>